--- a/index.html
+++ b/index.html
@@ -11,18 +11,20 @@
 <body>
     <div class="formatacao">
         <header>
-            <img src="./file/FOTO1.png">
+            <div class="charme"></div>
+            <img src="./file/httpsdrive.google.comfiled1DNtm9NYlF2jqvhYoAfm3Z4oRuf4XJijRviewusp=drive_link.jpn.png"
+                alt=" Naiane 'sorrindo de orelha a orelha', feliz, por ter conseguido entregar o codigo">
             <div>
                 <h1>Nome e Curiosidades</h1>
-                <p> Oi, </p>
-                <p>Sou Naiane Garrido, tenho 26 anos de pura ansiedade, Amo lasanha e queijo (apesar de itolerante a
-                    lactose) e quando tenho que escolher entre uma delas, fico paralisada e travo em loop infinito. Mas,
-                    no fundo, sou uma mistura de emoções, sonhos e memes. </p>
+                <p> Oi, Sou Naiane Garrido, tenho 26 anos de pura ansiedade, apaixonada em lasanha e queijo ( e apesar de ser
+                    itolerante a lactose) quando tenho que escolher entre uma delas, fico paralisada e travo em loop infinito. Mas,
+                    no fundo, sou uma mistura de determinação, sonhos e memes. </p>
             </div>
 
             <div>
                 <h1>Mais sobre mim (a quem possa interessar)</h1>
-                <p> Como todo brasileiro guerreiro, minha vida e caminhada é formada por altos e baixos. Para me
+                <p> Como todo brasileiro guerreiro e otimista, minha vida e caminhada é formada por altos e baixos. Para
+                    me
                     resumir, sempre que algum plano não da certo procuro me reinventar.
                     Com isso, minhas formações são: Pianista, Nutricionista, Necropcista, promotora de eventos e agora
                     aspirante a programadora.</p>
@@ -30,29 +32,29 @@
                     historicos para visitar(ou no meu caso trabalhar). Caso
                     queira conhecer um pouco mais sobre minha Região, deixarei sugestões de passeios e lugares para
                     visitar.</p>
-                <p><a href="https://squatro.com.br/dicas/pontos-turisticos-de-sao-paulo-top-guia-completo-em-2023/#Pontos_turisticos_historicos"
-                        target="_blank"> CONHEÇA A ZL - SP </a></p>
+                <a href="https://squatro.com.br/dicas/pontos-turisticos-de-sao-paulo-top-guia-completo-em-2023/#Pontos_turisticos_historicos"
+                    target="_blank"> CONHEÇA A ZL - SP </a>
             </div>
         </header>
     </div>
 
     <main>
         <section>
-            <div class="caixaFilmes">
+            <div class="caixaGostos">
                 <div class="formatacao">
                     <h1>Filmes e series</h1>
                     <ol>
                         <li>GOT</li>
                         <li>THE CHOSEN</li>
-                        <li>PENSE COMO ELES</a></li>
-                        <li>O CLUBE DA LUTA</a></li>
+                        <li>PENSE COMO ELES</li>
+                        <li>O CLUBE DA LUTA</li>
                     </ol>
                 </div>
             </div>
         </section>
 
         <section>
-            <div class="caixaMusica">
+            <div class="caixaGostos">
                 <div class="formatacao">
                     <h1>
                         Musicas e bandas:
@@ -73,3 +75,5 @@
     </footer>
 
 </body>
+
+</html>
